--- a/app/cart.html
+++ b/app/cart.html
@@ -25,9 +25,9 @@
   <div class="container header-container">
     <div class="header-top">
       <div class="header-top-main">
-        <div class="logo">
+        <a href="index.html?slide=7" class="btn logo">
           shop
-        </div>
+        </a>
 
         <div class="header-buttons">
           <a href="cart.html" class="btn btn-cart">
@@ -51,52 +51,6 @@
         come back
       </button>
     </div>
-
-    <nav class="nav header-nav main-swiper-nav" title="header nav"
-      data-transfer-origin="header-navigation" data-transfer-breakpoint="992" data-transfer-placement="first">
-      <ul class="list-reset nav__list">
-        <li class="nav__item">
-          <a href="index.html?slide=0" class="btn nav__link">
-            home
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=1" class="btn nav__link">
-            about
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=2" class="btn nav__link">
-            projects
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=3" class="btn nav__link">
-            modeling
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=4" class="btn nav__link">
-            credits
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=5" class="btn nav__link">
-            events
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=6" class="btn nav__link">
-            press
-          </a>
-        </li>
-        <li class="nav__item">
-          <a href="index.html?slide=7" class="btn nav__link">
-            merch
-          </a>
-        </li>
-      </ul>
-    </nav>
   </div>
 </header>
 
@@ -269,6 +223,13 @@
             </div>
           </div>
 
+          <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" name="terms-of-use" required>
+                            <span>I agree to the <a href="#" class="btn btn-inherit text-underline">terms of use</a></span>
+                        </label>
+                    </div>
+
           <button type="submit" class="btn btn-lg btn-secondary btn-submit">
             placea order
           </button>
@@ -390,6 +351,51 @@
         </button>
     </div>
     <div class="offcanvas-body" data-transfer-target="contacts-transfer header-navigation">
+        <nav class="nav header-nav header-nav main-swiper-nav" title="header nav">
+      <ul class="list-reset nav__list">
+        <li class="nav__item">
+          <a href="index.html?slide=0" class="btn nav__link">
+            home
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=1" class="btn nav__link">
+            about
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=2" class="btn nav__link">
+            projects
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=3" class="btn nav__link">
+            modeling
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=4" class="btn nav__link">
+            credits
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=5" class="btn nav__link">
+            events
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=6" class="btn nav__link">
+            press
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="index.html?slide=7" class="btn nav__link">
+            merch
+          </a>
+        </li>
+      </ul>
+    </nav>
+
         <nav class="nav header-nav contacts-nav" title="header nav">
             <ul class="list-reset nav__list">
                 <li class="nav__item">
