--- a/app/cart.html
+++ b/app/cart.html
@@ -146,7 +146,7 @@
 
             <div class="form-check">
               <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" name="news-and-offers">
+                <input class="form-check-input" type="checkbox" name="news-and-offers" checked>
                 <span>Billing address same.</span>
               </label>
             </div>
@@ -225,7 +225,7 @@
 
           <div class="form-check">
                         <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" name="terms-of-use" required>
+                            <input class="form-check-input" type="checkbox" name="cart-terms-of-use" required>
                             <span>I agree to the <a href="#" class="btn btn-inherit text-underline">terms of use</a></span>
                         </label>
                     </div>
