--- a/app/cart.html
+++ b/app/cart.html
@@ -166,6 +166,20 @@
             </div>
           </div>
 
+          <div class="field-controls" data-has-fields="2">
+            <div class="field-control">
+              <div class="fieldset">
+                <input type="text" class="field" name="address" placeholder="Address *" required>
+              </div>
+            </div>
+
+            <div class="field-control">
+              <div class="fieldset">
+                <input type="text" class="field" name="apt, suite" placeholder="Apt, Suite *" required>
+              </div>
+            </div>
+          </div>
+
           <div class="field-controls" data-has-fields="3">
             <div class="field-control">
               <div class="fieldset">
