--- a/app/404.html
+++ b/app/404.html
@@ -21,14 +21,10 @@
     Order fulfilled
 </h1>
   <div class="site-container">
-    <header class="header header--cart">
+    <header class="header">
   <div class="container header-container">
     <div class="header-top">
       <div class="header-top-main">
-        <a href="index.html?slide=7" class="btn logo">
-          shop
-        </a>
-
         <div class="header-buttons">
           <a href="cart.html" class="btn btn-cart">
             <span class="icon">
@@ -46,10 +42,6 @@
           </button>
         </div>
       </div>
-
-      <button type="button" class="btn btn-back">
-        come back
-      </button>
     </div>
   </div>
 </header>
