--- a/app/404.html
+++ b/app/404.html
@@ -58,10 +58,29 @@
               </h2>
             </div>
 
-            <a href="#" class="btn btn-lg btn-secondary alert-page-btn">
+            <a href="index.html" class="btn btn-lg btn-secondary alert-page-btn">
               go to home
             </a>
           </div>
+        </div>
+
+        <div class="hero-footer">
+          <button type="button" class="btn btn-link"
+            data-bs-toggle="offcanvas" data-bs-target="#offcanvas-contacts" aria-controls="offcanvasContacts">
+            <span class="icon">
+              <svg>
+                <use xlink:href="img/icons/share.svg#svg-share"></use>
+              </svg>
+            </span>
+
+            contacts
+          </button>
+
+          <p class="hero-footer-copy">
+            Copyright 2024 Anastasiia LLC. All rights reserved.
+            <br>
+            Powered by Dennetic Group.
+          </p>
         </div>
       </section>
     </main>
