--- a/app/bag-empty.html
+++ b/app/bag-empty.html
@@ -64,7 +64,7 @@
               </h2>
             </div>
 
-            <a href="#" class="btn btn-lg btn-secondary alert-page-btn">
+            <a href="index.html?slide=7" class="btn btn-lg btn-secondary alert-page-btn">
               continue shopping
             </a>
           </div>
