--- a/app/order-complete.html
+++ b/app/order-complete.html
@@ -87,7 +87,7 @@
               </ul>
             </div>
 
-            <a href="#" class="btn btn-lg btn-secondary alert-page-btn">
+            <a href="index.html?slide=7" class="btn btn-lg btn-secondary alert-page-btn">
               continue shopping
             </a>
           </div>
