--- a/app/order-complete.html
+++ b/app/order-complete.html
@@ -67,7 +67,7 @@
 
               <p class="alert-page-text">
                 We are sending you an email conmfirming your order details.
-                Should you have any queries regarding your order, please <a href="#" class="btn btn-inherit text-underline">contact us</a>.
+                Should you have any queries regarding your order, please <button type="button" class="btn btn-inherit text-underline" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-contacts" aria-controls="offcanvasContacts">contact us</button>.
               </p>
 
               <ul class="list-reset order-info">
